<resources>
    <string name="app_name">Grupo 3 App</string>
    <string name="LoginTitle">Login</string>
    <string name="entrar">Entrar</string>
    <string name="pendencias">Pendências</string>
    <string name="LibTodasEtapas">Liberar todas as Etapas</string>
    <string name="Turma">Nome turma</string>
    <string name="Etapa">Nome etapa</string>
    <string name="Aluno">Nome aluno</string>
    <string name="app_login">Seja Bem Vindo!</string>
    <string name="Btn_Sair">Sair</string>
    <string name="Btn_Logout">Logout</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Email">Insira seu Email</string>
    <string name="Senha">Insira sua Senha</string>
    <string name="Cadastrar_Email">Digite seu Email</string>
    <string name="Cadastrar_Senha">Digite sua Senha</string>
    <string name="Cadastrar_Nome">Digite seu Nome Completo</string>
    <string name="Chec_Prof">Professor</string>
    <string name="turmaCad">Turmas cadastradas</string>

    <string name="hint_nome">Nome <font color='#FF0000'>*</font></string>
    <string name="hint_sobrenome">Sobrenome <font color='#FF0000'>*</font></string>
    <string name="hint_email">E-mail <font color='#FF0000'>*</font></string>
    <string name="hint_senha">Senha <font color='#FF0000'>*</font></string>
    <string name="hint_confirmarsenha">Confirmar senha <font color='#FF0000'>*</font></string>
    <string name="hint_empresa">Empresa</string>
    <string name="hint_inicioestagio">Início estágio</string>
    <string name="hint_fimestagio">Fim estágio</string>
</resources>